feat: 原生js的功能基本完成

--- a/src/views/vueTransition/slider.html
+++ b/src/views/vueTransition/slider.html
@@ -107,6 +107,7 @@
       setInterval(() => {
         this.index++;
         this.go(this.index);
+        this.activeControl();
       }, 2000);
     }
 
